<resources>
    <string name="app_name">Assignment2</string>
    <string name="add_country_label">Add country:</string>
    <string name="add_year_label">year:</string>
    <string name="button_text">Add Country</string>
    <string name="conutry_danmak">Danmark</string>
    <string name="year_danmak">2005</string>
    <string name="Welcom_text">To add countries press </string>
    <string name="alert_Year">Enter a Vaild Year</string>
    <string name="alert_msg">Enter a vaild  year and country</string>
    <string name="alert_title">Erorr!</string>
    <string name="country_label">Country</string>
    <string name="year_label">Year</string>
    <string name="list_pref_backgorund">Background</string>
    <string name="lsit_pref_backgorund_summary">Choose Backgorund Color</string>
    <string name="error">Error</string>
    <string name="mp3_status">Playing</string>
    <string name="action_settings">Settings</string>
<string name="alert_msg2">Would you like to modify or cancel the alarm</string>
<string name="modify">modify alarm</string>
<string name="cancel">cancel alarm</string>
<string name="aler_title">options</string>
<string name="abort">Abort</string>
    <string name="aler_title2">Modify or Cancel Alarm</string>


</resources>

