<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ContryLable"
        android:text="@string/add_country_label"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:textColor="#000000"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ContryLable"
        android:id="@+id/countryInput"
        android:layout_marginLeft="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yearLable"
        android:text="@string/add_year_label"
        android:layout_below="@id/countryInput"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:textColor="#000000"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yearLable"
        android:id="@+id/yearInput"
        android:layout_marginLeft="5dp"
        android:maxLength="4"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yearInput"
        android:text="@string/button_text"
        android:layout_marginTop="30dp"
        android:id="@+id/addCountryButton"
        android:background="#21CE99"
        android:textColor="#ffffffff"
        />


</RelativeLayout>
